<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/padding"
    android:layout_marginRight="@dimen/padding"
    android:paddingTop="@dimen/padding">

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/child_1"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ingredient_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/ingredient_text"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/child_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_text"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/child_3"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/measure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:text="@string/measure_text"
                android:textSize="@dimen/normal_text_size"
                android:textAlignment="viewEnd"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>